--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
     "react-native-image-crop-picker": "^0.36.2",
     "react-native-option-menu": "^1.1.3",
     "react-native-otp-textinput": "0.0.8",
-    "react-native-paper": "^4.9.1",
+    "react-native-paper": "^4.9.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-push-notification": "^7.3.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
+    "react-native-simple-bottom-sheet": "^1.0.3",
     "react-native-simple-toast": "^1.1.3",
     "react-native-stars": "^1.2.2",
     "react-native-vector-icons": "^8.1.0",
