--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.8.4",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "^0.1.11",
@@ -19,20 +20,24 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@valdio/react-native-scrollable-tabview": "^0.8.12",
     "axios": "^0.21.1",
     "formik": "^2.2.8",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-datepicker": "^1.7.2",
+    "react-native-device-info": "^8.3.1",
     "react-native-dropdown-picker": "^5.1.19",
     "react-native-elements": "^3.4.1",
     "react-native-flash-message": "^0.1.23",
     "react-native-formik": "^1.7.8",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-modal": "^12.0.3",
     "react-native-option-menu": "^1.1.3",
+    "react-native-otp-inputs": "^7.0.3",
     "react-native-otp-textinput": "0.0.8",
     "react-native-pager-view": "^5.4.0",
     "react-native-paper": "^4.9.2",
