--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-formik": "^1.7.8",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-htmlview": "^0.16.0",
     "react-native-image-crop-picker": "^0.36.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-material-menu": "^2.0.0",
