--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,8 @@ target 'IndiaDeposit' do
   )
 
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'IndiaDepositTests' do
     inherit! :complete
     # Pods for testing
