--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^12.0.0",
     "@react-native-firebase/crashlytics": "^12.0.0",
-    "@react-native-picker/picker": "^1.16.1",
+    "@react-native-picker/picker": "^1.16.8",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
@@ -40,6 +41,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^12.0.3",
+    "react-native-multiple-select": "^0.5.7",
     "react-native-option-menu": "^1.1.3",
     "react-native-otp-inputs": "^7.0.3",
     "react-native-otp-textinput": "0.0.8",
@@ -54,13 +56,15 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
-    "react-native-simple-bottom-sheet": "^1.0.3",
+    "react-native-sectioned-multi-select": "^0.8.1",
     "react-native-simple-toast": "^1.1.3",
     "react-native-slider": "^0.11.0",
     "react-native-stars": "^1.2.2",
     "react-native-svg": "^12.1.1",
+    "react-native-switch": "^2.0.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.14.0",
     "react-redux": "^7.2.4",
     "recompose": "^0.30.0",
     "redux": "^4.1.0",
