--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^12.0.0",
     "@react-native-firebase/crashlytics": "^12.0.0",
+    "@react-native-firebase/messaging": "^12.9.1",
     "@react-native-picker/picker": "^1.16.8",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
