--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "formik": "^2.2.8",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-country-codes-picker": "^1.3.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-device-info": "^8.3.1",
     "react-native-elements": "^3.4.1",
