--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,6 +15,8 @@ target 'IndiaDeposit' do
   pod 'RNFBCrashlytics', :path => '../node_modules/@react-native-firebase/crashlytics'
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'ReactNativeART', :path => '../node_modules/@react-native-community/art'
+
   target 'IndiaDepositTests' do
     inherit! :complete
     # Pods for testing
