--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-native-clipboard/clipboard": "^1.8.4",
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/checkbox": "^0.5.7",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^12.0.0",
@@ -32,6 +34,7 @@
     "react-native-flash-message": "^0.1.23",
     "react-native-formik": "^1.7.8",
     "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.0-beta.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-htmlview": "^0.16.0",
     "react-native-image-crop-picker": "^0.36.2",
@@ -43,6 +46,7 @@
     "react-native-pager-view": "^5.4.0",
     "react-native-paper": "^4.9.2",
     "react-native-picker-select": "^8.0.4",
+    "react-native-pie-chart": "^2.0.2",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-progress": "^5.0.0",
     "react-native-push-notification": "^7.3.1",
@@ -54,6 +58,7 @@
     "react-native-slider": "^0.11.0",
     "react-native-stars": "^1.2.2",
     "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-switch": "^2.0.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^8.1.0",
