--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "react-native-popup-dialog": "^0.18.3",
     "react-native-progress": "^5.0.0",
     "react-native-push-notification": "^7.3.1",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "^2.2.3",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
@@ -68,6 +68,7 @@
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "rn-fetch-blob": "^0.12.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
