--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-native-elements": "^3.4.1",
     "react-native-flash-message": "^0.1.23",
     "react-native-formik": "^1.7.8",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.0-beta.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-htmlview": "^0.16.0",
     "react-native-image-crop-picker": "^0.36.2",
