--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "formik": "^2.2.8",
     "react": "17.0.1",
     "react-native": "0.64.1",
-    "react-native-country-codes-picker": "^1.3.2",
+    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-date-picker": "^4.1.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-device-info": "^8.3.1",
-    "react-native-elements": "^3.4.1",
+    "react-native-document-picker": "^7.1.1",
+    "react-native-elements": "^3.4.2",
     "react-native-flash-message": "^0.1.23",
     "react-native-formik": "^1.7.8",
     "react-native-geocoding": "^0.5.0",
@@ -41,6 +43,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-modal": "^12.0.3",
     "react-native-multiple-select": "^0.5.7",
+    "react-native-option-menu": "^1.1.3",
     "react-native-otp-inputs": "^7.0.3",
     "react-native-otp-textinput": "0.0.8",
     "react-native-pager-view": "^5.4.0",
@@ -50,6 +53,7 @@
     "react-native-popup-dialog": "^0.18.3",
     "react-native-progress": "^5.0.0",
     "react-native-push-notification": "^7.3.1",
+    "react-native-radio-buttons-group": "^2.2.7",
     "react-native-reanimated": "^2.2.3",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
@@ -83,5 +87,18 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jainrocks999/IndiaDepositApp.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jainrocks999/IndiaDepositApp/issues"
+  },
+  "homepage": "https://github.com/jainrocks999/IndiaDepositApp#readme",
+  "description": ""
 }
