--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^0.21.1",
     "formik": "^2.2.8",
     "react": "17.0.1",
