--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^8.2.0",
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^12.0.0",
     "@react-native-firebase/crashlytics": "^12.0.0",
@@ -36,7 +37,7 @@
     "react-native-device-info": "^8.3.1",
     "react-native-document-picker": "^8.1.0",
     "react-native-elements": "^3.4.2",
-    "react-native-flash-message": "^0.1.23",
+    "react-native-flash-message": "^0.1.24",
     "react-native-formik": "^1.7.8",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.0-beta.3",
@@ -46,6 +47,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-modal": "^12.0.3",
     "react-native-multiple-select": "^0.5.7",
+    "react-native-offline": "^6.0.0",
     "react-native-option-menu": "^1.1.3",
     "react-native-otp-inputs": "^7.0.3",
     "react-native-otp-textinput": "0.0.8",
